fix swagger gen
