# web/restapi/operations/carml/predict_urlx_responses.go
@@ -1,55 +1,0 @@
-package carml
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/rai-project/dlframework/web/models"
-)
-
-// PredictUrlxOKCode is the HTTP code returned for type PredictUrlxOK
-const PredictUrlxOKCode int = 200
-
-/*PredictUrlxOK predict urlx o k
-
-swagger:response predictUrlxOK
-*/
-type PredictUrlxOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.DlframeworkPredictURLResponse `json:"body,omitempty"`
-}
-
-// NewPredictUrlxOK creates PredictUrlxOK with default headers values
-func NewPredictUrlxOK() *PredictUrlxOK {
-	return &PredictUrlxOK{}
-}
-
-// WithPayload adds the payload to the predict urlx o k response
-func (o *PredictUrlxOK) WithPayload(payload *models.DlframeworkPredictURLResponse) *PredictUrlxOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the predict urlx o k response
-func (o *PredictUrlxOK) SetPayload(payload *models.DlframeworkPredictURLResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PredictUrlxOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
